welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:57: error: illegal start of simple expression
}} 
^ZigZag:57: error: 'while' expected but '}' found.
}} 
 ^